--- a/src/MPC_IO/src/Makefile.in
+++ b/src/MPC_IO/src/Makefile.in
@@ -112,7 +112,9 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@MPC_FORTRAN_ENABLED_TRUE@am__append_1 = -I$(abs_top_srcdir)/src/MPC_Fortran/include/
+@MPC_BUILD_OPENPA_TRUE@am__append_1 = -I$(abs_top_srcdir)/contrib/openpa/src -I$(abs_top_builddir)/contrib/openpa/src
+@MPC_BUILD_OPENPA_FALSE@am__append_2 = $(OPA_CFLAGS) 
+@MPC_FORTRAN_ENABLED_TRUE@am__append_3 = -I$(abs_top_srcdir)/src/MPC_Fortran/include/
 subdir = src/MPC_IO/src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/m4/ax_gcc_builtin.m4 \
@@ -542,6 +544,7 @@ pythondir = @pythondir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
+subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
@@ -560,7 +563,8 @@ AM_CPPFLAGS = -I$(abs_top_srcdir)/src/MPC_Common/include/ \
 	-I$(abs_top_srcdir)/src/MPC_Topology/include/ \
 	-I$(abs_top_builddir)/src/MPC_Common/include/ \
 	-I$(abs_top_builddir)/src/MPC_IO/include/ \
-	-I$(abs_top_srcdir)/src/MPC_Config/include/ $(am__append_1)
+	-I$(abs_top_srcdir)/src/MPC_Config/include/ $(am__append_1) \
+	$(am__append_2) $(am__append_3)
 SUBDIRS = romio
 lib_LTLIBRARIES = libmpcio.la
 libmpcio_la_SOURCES = mpl.c mpir_ext.c
