--- a/src/MPC_IO/src/romio/Makefile.in
+++ b/src/MPC_IO/src/romio/Makefile.in
@@ -1265,6 +1265,7 @@ pythondir = @pythondir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
+subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
