--- a/src/MPC_MPI/src/Makefile.in
+++ b/src/MPC_MPI/src/Makefile.in
@@ -89,11 +89,13 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 @MPC_THREAD_ENABLED_TRUE@am__append_1 = -I$(abs_top_srcdir)/src/MPC_Threads/src/ -I$(abs_top_srcdir)/src/MPC_Threads/include/ -I$(abs_top_srcdir)/src/MPC_Topology/include/
-@INFINIBAND_DRIVER_ENABLED_TRUE@am__append_2 = -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/ib/
-@PORTALS4_DRIVER_ENABLED_TRUE@am__append_3 = -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/portals/
-@OFI_DRIVER_ENABLED_TRUE@am__append_4 = -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/ofi/
-@MPC_OPENMP_ENABLED_TRUE@am__append_5 = -I$(abs_top_srcdir)/src/MPC_OpenMP/include/
-@MPC_FORTRAN_ENABLED_TRUE@am__append_6 = fortran.c
+@MPC_BUILD_OPENPA_TRUE@am__append_2 = -I$(abs_top_srcdir)/contrib/openpa/src -I$(abs_top_builddir)/contrib/openpa/src
+@MPC_BUILD_OPENPA_FALSE@am__append_3 = $(OPA_CFLAGS) 
+@INFINIBAND_DRIVER_ENABLED_TRUE@am__append_4 = -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/ib/
+@PORTALS4_DRIVER_ENABLED_TRUE@am__append_5 = -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/portals/
+@OFI_DRIVER_ENABLED_TRUE@am__append_6 = -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/ofi/
+@MPC_OPENMP_ENABLED_TRUE@am__append_7 = -I$(abs_top_srcdir)/src/MPC_OpenMP/include/
+@MPC_FORTRAN_ENABLED_TRUE@am__append_8 = fortran.c
 subdir = src/MPC_MPI/src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/m4/ax_gcc_builtin.m4 \
@@ -493,6 +495,7 @@ pythondir = @pythondir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
+subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
@@ -540,7 +543,8 @@ AM_CPPFLAGS = -I$(abs_top_srcdir)/src/MPC_Common/include/ \
 	-I$(abs_top_srcdir)/src/MPC_MPI/include/ \
 	-I$(abs_top_builddir)/src/include/ $(am__append_1) \
 	$(am__append_2) $(am__append_3) $(am__append_4) \
-	$(am__append_5) -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/tcp/ \
+	$(am__append_5) $(am__append_6) $(am__append_7) \
+	-I$(abs_top_srcdir)/src/MPC_Lowcomm/src/tcp/ \
 	-I$(abs_top_srcdir)/src/MPC_Lowcomm/src/shm/
 lib_LTLIBRARIES = libmpcmpi.la
 libmpcmpi_la_SOURCES = comm_lib.c egreq_nbc.c mpc_extern32.c \
