--- a/src/MPC_OpenMP/src/Makefile.in
+++ b/src/MPC_OpenMP/src/Makefile.in
@@ -89,6 +89,8 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 @MPC_MPI_ENABLED_TRUE@am__append_1 = -I$(abs_top_srcdir)/src/MPC_MPI/src/ -I$(abs_top_srcdir)/src/MPC_MPI/include/  -I$(abs_top_builddir)/src/MPC_IO/include/
+@MPC_BUILD_OPENPA_TRUE@am__append_2 = -I$(abs_top_srcdir)/contrib/openpa/src -I$(abs_top_builddir)/contrib/openpa/src
+@MPC_BUILD_OPENPA_FALSE@am__append_3 = $(OPA_CFLAGS) 
 subdir = src/MPC_OpenMP/src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/m4/ax_gcc_builtin.m4 \
@@ -508,6 +510,7 @@ pythondir = @pythondir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
+subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
@@ -552,7 +555,7 @@ AM_CPPFLAGS = -I$(abs_top_srcdir)/src/MPC_Common/include/ \
 	-I$(abs_top_srcdir)/src/MPC_Threads/src/ \
 	-I$(abs_top_srcdir)/src/MPC_Threads/include/ $(am__append_1) \
 	-I$(abs_top_srcdir)/src/MPC_OpenMP/include/ $(VMEM_CFLAGS) \
-	$(OPA_CFLAGS) $(tools_inc)
+	$(OPA_CFLAGS) $(tools_inc) $(am__append_2) $(am__append_3)
 tools_inc = -I$(abs_top_srcdir)/src/MPC_OpenMP/src/tools/src/ \
             -I$(abs_top_srcdir)/src/MPC_OpenMP/src/tools/callback/ \
             -I$(abs_top_srcdir)/src/MPC_OpenMP/src/tools/trace/
