--- a/src/MPC_Topology/Makefile.in
+++ b/src/MPC_Topology/Makefile.in
@@ -460,6 +460,7 @@ pythondir = @pythondir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
+subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
