persistent tasks + 'delete' feature

--- a/src/MPC_Common/Makefile.in
+++ b/src/MPC_Common/Makefile.in
@@ -518,7 +518,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 mpc_headerdir = $(pkgincludedir)
-mpc_header_HEADERS = $(abs_builddir)/include/mpc_common_types.h  $(abs_srcdir)/include/mpc_common_debugger.h   $(abs_srcdir)/include/mpc_common_aio.h $(abs_srcdir)/include/mpc_common_recycler.h
+mpc_header_HEADERS = $(abs_builddir)/include/mpc_common_types.h  $(abs_srcdir)/include/mpc_common_debugger.h   $(abs_srcdir)/include/mpc_common_aio.h $(abs_srcdir)/include/mpc_common_recycler.h  $(abs_srcdir)/include/mpc_common_indirect_array.h
 SUBDIRS = src
 all: all-recursive
 
