--- a/src/MPC_OpenMP/src/Makefile.am
+++ b/src/MPC_OpenMP/src/Makefile.am
@@ -43,7 +43,7 @@ AM_CPPFLAGS += $(tools_inc)
 
 lib_LTLIBRARIES = libmpcomp.la
 
-libmpcomp_la_SOURCES = mpcomp_api.c mpcomp_core.c mpcomp_fortran.c mpcomp_loop.c
+libmpcomp_la_SOURCES = mpcomp_api.c mpcomp_api_task_scheduling.c mpcomp_core.c mpcomp_fortran.c mpcomp_loop.c
 libmpcomp_la_SOURCES += mpcomp_parallel_region.c mpcomp_places_env.c mpcomp_spinning_core.c
 libmpcomp_la_SOURCES += mpcomp_sync.c mpcomp_task.c
 libmpcomp_la_SOURCES += mpcomp_tree.c mpcomp_alloc.c omp_gomp.c omp_intel_atomics.c omp_intel.c
